# tarde-plus

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  dev.sh  docker-compose.yml  package.json  turbo.json
apps/api/: .env.example  alembic.ini  alembic_trades.ini  package.json  pyproject.toml
apps/api/data/: fii_history.json
apps/api/data/trade_history/: 2026-04-02.json
apps/api/migrations/versions/: 20260330_001_initial_schema.py  20260330_002_uuid_run_ids.py  20260330_003_accuracy_tracking.py  20260330_004_ai_sentiment_columns.py
apps/api/migrations_trades/versions/: 20260330_001_initial_trades_schema.py
apps/api/models/: bankbees_features.json  bankbees_metrics.json  goldbees_features.json  goldbees_metrics.json  niftybees_metrics.json  silverbees_metrics.json  training_summary.json
apps/api/src/trade_plus/: __init__.py  api.py  cli.py  instruments.py  prediction.py
apps/api/src/trade_plus/brokers/: base.py  mock.py
apps/api/src/trade_plus/core/: config.py  engine.py  events.py  message_bus.py
apps/api/src/trade_plus/data/: redis_store.py  timescale_store.py
apps/api/src/trade_plus/market_data/: aggregator.py  base.py  fii_tracker.py  free_apis.py  gap_predictor.py  grok_sentiment.py  market_hours.py  news_sentiment.py  nse.py  nse_client.py  parallel_news.py  signal_collector.py  yahoo.py
apps/api/src/trade_plus/ml/: accuracy.py  features.py  predict.py  train.py
apps/api/src/trade_plus/risk/: manager.py
apps/api/src/trade_plus/strategies/: base.py  vwap_supertrend.py
apps/api/tests/: test_core.py
apps/web/: .env.example  next.config.ts  (+1 more)
(+22 files in other folders)
