[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-plus"
version = "0.1.0"
description = "Low-latency algorithmic trading system for Indian markets"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "websockets>=13.0",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "numpy>=2.0",
    "pandas>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.0",
    "click>=8.1",
    "uvloop>=0.21; sys_platform != 'win32'",
    "orjson>=3.10",
    "ta-lib-bin>=0.6; sys_platform == 'linux'",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
ml = [
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "torch>=2.5",
]

[project.scripts]
trade-plus = "trade_plus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
